data type update